[package]
name = "rustkeeper-test"
version = "0.1.0"
edition = "2021"
description = "Testing helpers for the `rustkeeper` crate"
homepage = "https://github.com/kaixinbaba/zookeeper-rs"
repository = "https://github.com/kaixinbaba/zookeeper-rs"
documentation = "https://docs.rs/rustkeeper-test"
license = "MIT"
rust-version = "1.70"

[dependencies]
rustkeeper = { version = "0.1.0", path = "../rustkeeper" }
