[package]
name = "rustkeeper"
version = "0.1.0"
keywords = ["zookeeper"]
description = "Zookeeper library for Rust."
homepage = "https://github.com/kaixinbaba/zookeeper-rs"
repository = "https://github.com/kaixinbaba/zookeeper-rs"
documentation = "https://docs.rs/rustkeeper"
license = "MIT"
edition = "2021"
rust-version = "1.70"
readme = "../README.md"

[dependencies]
