[package]
name = "rustkeeper"
version = "0.1.0"
keywords = ["zookeeper"]
description = "Zookeeper library for Rust."
homepage = "https://github.com/kaixinbaba/rustkeeper"
repository = "https://github.com/kaixinbaba/rustkeeper"
documentation = "https://docs.rs/rustkeeper"
license = "GNU"
edition = "2021"
rust-version = "1.70"
readme = "../README.md"

[dependencies]

combine = { version = "4.6", default-features = false, features = ["std"] }

# Only needed for AIO
bytes = { version = "1", optional = true }
futures-util = { version = "0.3.15", default-features = false, optional = true }
pin-project-lite = { version = "0.2", optional = true }
tokio-util = { version = "0.7", optional = true }
tokio = { version = "1", features = ["rt", "net", "time"], optional = true }


# Only needed for async_std support
async-std = { version = "1.8.0", optional = true}
async-trait = { version = "0.1.24", optional = true }



[features]
aio = ["bytes", "pin-project-lite", "futures-util", "futures-util/alloc", "futures-util/sink", "tokio/io-util", "tokio-util", "tokio-util/codec", "tokio/sync", "combine/tokio", "async-trait"]